src/components/Bibliography.css
.body {
    width: 400px;
    padding: 0px;
    margin: 0px;
}

.splash {
    width: 360px;
    margin: 0px;
    text-align: center;
    color: white;
    background-color: rgb(96, 178, 255);
}

.title {
    font-size: 1.5em;
}

.list-container {
    width: 350px;
    height: 300px;
    margin-top: 20px;
    margin-left: 25px;
    margin-right: 25px;
    border-style: solid;
    border-color: grey;
    border-width: 1px;
}

.list-item {
    width: 90%;
    height: auto;
    min-height: 26px;
    line-height: 26px;
    text-align: left;
    vertical-align: middle;
    word-wrap: break-word;
    white-space: pre-line;
}

#copyArea {
    font-family: 'Times New Roman', Times, serif;
    font-size: 12pt;
    line-height: 2;
    position: fixed;
    left:-10000px;
    top:-10000px;
    white-space: pre;
}

.button-container {
    width: 100%;
    height: auto;
    display: flex;
    justify-content: space-around;
}

.bottom-button {
    justify-content: center;
}

